Linked Armature don't be updated on Command Line Render #37713

Closed
opened 2013-12-05 21:59:42 +01:00 by Gabriel Caraballo · 8 comments

System Information
Ubuntu 12.04 64bits

Blender Version
Broken: Blender 2.69
Worked: ?

Blender don't update linked armatures on first frame on Command Line render

Extract attached zip, on a terminal execute:

blender -b SceneConstBug_b.blend -f 1

The file testb.png0001.png is generated, showing a cube in the center (but if you open the file the cube is on the upper left corner).

Rendering a frame range:

blender -b SceneConstBug_b.blend -s 1 -e 3 -a

or

blender -b SceneConstBug_b.blend -a

SceneConstBug.zip

First frame shows the cube in center, las two in the corner.

Regards!

**System Information** Ubuntu 12.04 64bits **Blender Version** Broken: Blender 2.69 Worked: ? Blender don't update linked armatures on first frame on Command Line render Extract attached zip, on a terminal execute: ``` blender -b SceneConstBug_b.blend -f 1 ``` The file testb.png0001.png is generated, showing a cube in the center (but if you open the file the cube is on the upper left corner). Rendering a frame range: ``` blender -b SceneConstBug_b.blend -s 1 -e 3 -a ``` or ``` blender -b SceneConstBug_b.blend -a ``` [SceneConstBug.zip](https://archive.blender.org/developer/F36685/SceneConstBug.zip) First frame shows the cube in center, las two in the corner. Regards!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GabrielCaraballo

Added subscriber: @GabrielCaraballo
Brecht Van Lommel self-assigned this 2013-12-10 19:49:58 +01:00

This issue was referenced by blender/blender-addons-contrib@522f17daa1

This issue was referenced by blender/blender-addons-contrib@522f17daa105a5c640950e74ece7aab2f83dd485

This issue was referenced by 522f17daa1

This issue was referenced by 522f17daa105a5c640950e74ece7aab2f83dd485

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 522f17daa1.

Closed by commit 522f17daa1.

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Thanks!!! :D

Thanks!!! :D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37713
No description provided.